plugins {
    id "fabric-loom" version "$loom_version"
    id 'maven-publish'
}

version = "$mod_version+$target_version"

base {
    archivesName = archives_name
}

repositories {
    maven { url "https://jitpack.io" }
    flatDir { dirs "libs" }
}

loom {
    accessWidenerPath = file("src/main/resources/atum.accesswidener")
}

dependencies {
    minecraft "com.mojang:minecraft:$minecraft_version"
    mappings "net.fabricmc:yarn:${minecraft_version}+build.$yarn_build:v2"
    modImplementation "net.fabricmc:fabric-loader:$loader_version"

    // check for the latest versions at https://jitpack.io/#kingcontaria/speedrunapi
    modImplementation "com.github.KingContaria:SpeedrunAPI:1614123700"
}

processResources {
    inputs.property "version", version

    filesMatching("fabric.mod.json") {
        expand "version": version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release.set(16)
}

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16

    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${base.archivesName.get()}" }
    }
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
